[package]
name = "fast-ordered-buffer"
version = "0.1.0"
edition = "2024"

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
futures = { version = "0.3", default-features = false, features = ["alloc"] }
pin-project-lite = { version = "0.2", default-features = false }

[dev-dependencies]
futures = { version = "0.3" }
criterion = { version = "0.5.1", features = [
    "futures",
    "tokio",
    "async",
    "async_tokio",
] }
insta = "1.42.2"
pretty_assertions = "1.4.1"
rand = "0.9.0"
tokio = { version = "1", features = ["full"] }
mutants = "0.0.3"

[[bench]]
name = "fast_ordered_buffer_bench"
harness = false
