[package]
name = "fast-ordered-buffer"
version = "0.1.0"
edition = "2024"
authors = ["Josiah Bull <josiah.bull7@gmail.com>"]
description = "A faster buffering implementation for asynchronous streams, trading off memory usage for speed."
license = "MIT OR Apache-2.0"
repository = "https://github.com/JosiahBull/fast-ordered-buffer"
keywords = ["buffer", "ordered", "fast"]
categories = ["data-structures", "algorithms"]
readme = "README.md"
homepage = "https://github.com/JosiahBull/fast-ordered-buffer"

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
futures = { version = "0.3", default-features = false, features = ["alloc"] }
pin-project-lite = { version = "0.2", default-features = false }

[dev-dependencies]
futures = { version = "0.3" }
criterion = { version = "0.5.1", features = [
    "futures",
    "tokio",
    "async",
    "async_tokio",
] }
insta = "1.42.2"
pretty_assertions = "1.4.1"
rand = "0.9.0"
tokio = { version = "1", features = ["full"] }
mutants = "0.0.3"

[[bench]]
name = "fast_ordered_buffer_bench"
harness = false
